--- a/main.html
+++ b/main.html
@@ -7,8 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div>
+		<label for="first-name">First Name: </label>
+		<input id="first-name" required="Yes">
+		<br>
+		<!-- <br> -->
+		<label for="last-name">Last Name: </label>
+		<input id="last-name" required="Yes">
+		<br>
+		<!-- <br> -->
+		<label for="number">Phone Number: </label>
+		<input id="number" required="Yes">
+		<br>
+		<!-- <br> -->
+		<label for="email">Email ID: </label>
+		<input id="email" required="Yes">
+		<br>
+		<!-- <br> -->
+		<button id="submit">Submit</button>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
