--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<div>
-		<label for="first-name">First Name: </label>
-		<input id="first-name" required="Yes">
+		<label for="name">First Name: </label>
+		<input id="name" required="Yes">
 		<br>
 		<!-- <br> -->
 		<label for="last-name">Last Name: </label>
