--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <body>
 	<div>
 		<label for="name">First Name: </label>
-		<input id="name" required="Yes">
+		<input id="name" name="First Name" required="Yes">
 		<br>
 		<!-- <br> -->
 		<label for="last-name">Last Name: </label>
-		<input id="last-name" required="Yes">
+		<input id="last-name" name="Last Name" required="Yes">
 		<br>
 		<!-- <br> -->
 		<label for="number">Phone Number: </label>
-		<input id="number" required="Yes">
+		<input id="number" name="Phone Number" required="Yes">
 		<br>
 		<!-- <br> -->
 		<label for="email">Email ID: </label>
-		<input id="email" required="Yes">
+		<input id="email" name="Email ID" required="Yes">
 		<br>
 		<!-- <br> -->
 		<button id="submit">Submit</button>
