--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<div>
+		<form id="user-form">
 		<label for="name">First Name: </label>
 		<input id="name" name="First Name" required="Yes">
 		<br>
@@ -25,6 +26,7 @@
 		<br>
 		<!-- <br> -->
 		<button id="submit">Submit</button>
+		</form>
 	</div>
 	<script type="text/javascript" src="./script.js">
 </script>
