--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<input id="email" name="Email ID" required="Yes">
 		<br>
 		<!-- <br> -->
-		<button id="submit">Submit</button>
+		<button id="submit" type="submit">Submit</button>
 		</form>
 	</div>
 	<script type="text/javascript" src="./script.js">
