--- a/main.html
+++ b/main.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<div>
 		<form id="user-form">
-		<label for="name">First Name: </label>
-		<input id="name" name="First Name" required="Yes">
-		<br>
-		<!-- <br> -->
-		<label for="last-name">Last Name: </label>
-		<input id="last-name" name="Last Name" required="Yes">
-		<br>
-		<!-- <br> -->
-		<label for="number">Phone Number: </label>
-		<input id="number" name="Phone Number" required="Yes">
-		<br>
-		<!-- <br> -->
-		<label for="email">Email ID: </label>
-		<input id="email" name="Email ID" required="Yes">
-		<br>
-		<!-- <br> -->
-		<button id="submit" type="submit">Submit</button>
+			<label for="name">First Name: </label>
+			<input id="name" name="First Name" required>
+			<br>
+
+			<label for="last-name">Last Name: </label>
+			<input id="last-name" name="Last Name" required>
+			<br>
+
+			<label for="number">Phone Number: </label>
+			<input id="number" name="Phone Number" required>
+			<br>
+
+			<label for="email">Email ID: </label>
+			<input id="email" name="Email ID" required>
+			<br>
+
+			<button id="submit" type="submit">Submit</button>
 		</form>
 	</div>
-	<script type="text/javascript" src="./script.js">
-</script>
-
+	<script>
+		document.getElementById("user-form").addEventListener("submit", function(event) {
+			event.preventDefault(); // Prevent actual form submission
+			alert(
+				`First Name: ${document.getElementById("name").value}
+				Last Name: ${document.getElementById("last-name").value}
+				Phone Number: ${document.getElementById("number").value}
+				Email ID: ${document.getElementById("email").value}`
+			);
+		});
+	</script>
 </body>
-
 </html>
